--- a/style.css
+++ b/style.css
@@ -1,64 +1,38 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+body{
+    font-family: sans-serif;
+    margin: 0px;
 }
 
-li {
-  float: right;
+main{
+    margin: 8px;
+    margin-top: 20px;
+    text-align: center;
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+.navbar ul{
+    list-style-type: none;
+    background-color: #333333;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
 }
 
-.split {
-	float: left;
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
+.navbar a{
+    color: #ffffff;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
 }
 
-li a:hover {
-  background-color: #111;
+.navbar a:hover{
+    background-color: #000000;
 }
 
-.button {
-  background-color: #4cAf50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
+.navbar li:not(.split){
+    float: right;
 }
 
-.button:hover {
-  background-color: #449d48;
-}
-
-.panel {
-  background-color: #008cbA;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.panel:hover {
-  background-color: #007ea7;
+.name{
+    float: left;
 }
